--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2002-10-20  Albert Chin-A-Young  <china@thewrittenword.com>
+
+	* libtool.m4: When a module is built for AIX, the 'lib'
+	prefix isn't needed, neither is the version. AIX dlopen
+	will honor the RPATH in a library.
+
 2002-10-20  Alexandre Duret-Lutz  <adl@gnu.org>
 
 	* libtool.m4 (AC_LIBTOOL_SYS_GLOBAL_SYMBOL_PIPE): Honor
