--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2002-10-22  Brad Smith  <brad@comstyle.com>
+
+	* libtool.m4: $linker_flag -> $compiler_flag for OpenBSD
+	archive_cmds entries using $CC.
+
 2002-10-22  Alexandre Duret-Lutz  <adl@gnu.org>
 
 	* ltdl.m4 (AC_LIB_LTDL, AC_LTDL_ENABLE_INSTALL,
