--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2002-10-22  Albert Chin-A-Young  <china@thewrittenword.com>
+
+	* libltdl/ltdl.c: Init char * to NULL, not 0. And, for
+	some char * values, set *[var] = 0 to *[var] = '\0'.
+
 2002-10-22  Brad Smith  <brad@comstyle.com>
 
 	* libtool.m4: $linker_flag -> $compiler_flag for OpenBSD
