--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2002-10-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+        * Removed old Windows cruft.
+        * Adapted pw32 to be like Cygwin/MinGW.
+
 2002-10-23  Robert Boehne  <rboehne@gnu.org>
 
 	ltmain.in: Do not add 1 to the version under IRIX, it is
