--- a/ChangeLog
+++ b/ChangeLog
@@ -1,11 +1,16 @@
+2002-10-24  Andrew Suffield  <asuffield@debian.org>
+
+	* libltdl/ltdl.c (lt_dlopenext): Corrected sense of "file not
+        found" check.
+
 2002-10-24  Ossama Othman  <ossama@doc.ece.uci.edu>
 
 	* ltmain.in: Support compiler names matching g++*
 
 2002-10-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
-        * Removed old Windows cruft.
-        * Adapted pw32 to be like Cygwin/MinGW.
+        * libtool.m4: Removed old Windows cruft.
+        * libtool.m4: Adapted pw32 to be like Cygwin/MinGW.
 
 2002-10-23  Robert Boehne  <rboehne@gnu.org>
 
