--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2002-10-25  Albert Chin-A-Young  <china@thewrittenword.com>
+
+	* libtool.m4: When LDFLAGS="-Wl,-brtl,[other options]", the
+	-brtl special-case code for AIX never gets triggered because
+	were are being too specific about how we search for -brtl.
+	Use case statement to avoid this. Remove extraneous
+	semicolon.
+	* ltmain.in: Recognize the IBM xlc compiler.
+
 2002-10-24  Andrew Suffield  <asuffield@debian.org>
 
 	* libltdl/ltdl.c (lt_dlopenext): Corrected sense of "file not
