--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,27 @@
+2002-10-30  Charles Wilson  <cwilson@ece.gatech.edu>
+
+	* libtool.m4 (AC_LIBTOOL_PROG_CC_C_O): use printf, not
+	echo. (AC_DEPLIBS_CHECK_METHOD): use new shell function
+	win32_libid on w32 platforms
+	* ltmain.in: add new section for shell functions. Add
+	win32_libid() shell function.
+	* f77demo/Makefile.am: add -no-undefined flag
+
+2002-10-30  Rob Browning  <rlb@defaultvalue.org>
+
+	* ltdl.c (realloc): Remove custom realloc. (#define
+	rpl_realloc realloc) and comment out later code for custom
+	realloc. You can't define your own malloc unless you know
+	enough about the malloc in use to be able to tell how big
+	the src ptr is. The disabled code incorrectly used the
+	*destination* ptr to decide how much to copy. This
+	sometimes results in out-of-bound accesses which cause
+	segfaults. This is a quick hack for now; we may want
+	something cleaner later. (tryall_dlopen_module): check to
+	be sure (dirname_len > 0) before testing first character
+	against '/'. (try_dlopen): check for feof(file) in read
+	loop -- otherwise infloop?
+
 2002-10-25  Robert Boehne  <rboehne@gnu.org>
 
 	* ltmain.in (-XCClinker): New flag passes a linking option
