--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,8 @@
-2002-11-18  Bob Friesenhahn <bfriesen@simple.dallas.tx.us>
+2002-11-18  Kevin Ryde  <user42@zip.com.au>
+
+	* doc/libtool.texi (Library tips): Note array dimensions.
+
+2002-11-18  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* tests/*.test: MinGW's MSYS treats files under /dev
 	specially. This causes 'test -r /dev/null/config/site' to
