--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2002-11-18  Jakub Jelinek  <jakub@redhat.com>
+
+	* libtool.m4: Support linking of 64-bit libraries on
+	sparc{,v[789]}-*linux*, s390*-*linux*, ppc*-*linux*
+	GNU/Linux systems when the platform default is to build
+	32-bit libraries.
+
 2002-11-18  Andreas Jaeger  <aj@suse.de>, Bo Thorsen  <bo@suse.de>
 
 	* libtool.m4: Support linking of 32-bit libraries with ld
