--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,15 @@
 2002-11-18  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
+	* ltmain.in: When using gcc, pass -mfoo to the linker
+	via $compiler_flags in order to pass architecture information to
+	the linker (e.g. 32 vs 64-bit). This may also be accomplished via
+	-Wl,-mfoo but this is not reliable with gcc because gcc may use
+	-mfoo to select a different linker, different libraries, etc, while
+	-Wl,-mfoo simply passes -mfoo to the linker. If there is a better
+	solution, please let me know what it is.
+
+2002-11-18  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
 	* tests/Makefile.am: Conditional assignment of FFLAGS = @FFLAGS@
 	does not appear to be necessary given that Automake makes this
 	assignment by default.  The condition is removed since Automake
