--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2002-12-30  Charles Wilson  <cwilson@ece.gatech.edu>
+
+	* libtool.m4 (AC_LIBTOOL_RC): AC_PROG_RC doesn't exist --
+	but we do AC_DEFUN something called LT_AC_PROG_RC.
+	Call that instead.
+
 2002-12-30  Robert Boehne  <rboehne@gnu.org>
  
 	* libtool.m4 (AC_LIBTOOL_LANG_CXX_CONFIG): Copy the section
