--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+2002-12-27  Charles Wilson  <cwilson@ece.gatech.edu>
+
+	* libtool.m4 (AC_LIBTOOL_LANG_CXX_CONFIG): modify
+	$archive_expsym_cmds to restore support for using
+	.def files via the -export-symbols switch.
+	(AC_LIBTOOL_PROG_LD_SHLIBS([TAGNAME]): in both the [CXX]
+	branch and the default branch, improve $export_symbols_cmds
+	so that DATA symbols are properly  labelled.  In the default
+	branch, duplicate the _CXX_CONFIG correction for
+	$archive_expsym_cmds.
+
 2002-12-30  Charles Wilson  <cwilson@ece.gatech.edu>
 
 	* libtool.m4 (AC_LIBTOOL_RC): AC_PROG_RC doesn't exist --
